Moved animations from java to CSS, corrected HTML spacing

--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-@keyframes secondpagelinkanimation {
-    from {background-color: rgb(52, 216, 235); color: rgb(0, 0, 35);}
-    to {background-color: rgb(0, 0, 35); color: rgb(52, 216, 235);}
-}
-@keyframes spacepagelinkanimation {
-    from {color: rgb(0, 0, 35);}
-    to {background-color: rgb(0, 0, 35); color: rgb(52, 216, 235);}
-}
 @keyframes spin {
     from {transform:rotate(0deg);}
     to {transform:rotate(360deg);}}
@@ -69,16 +61,16 @@ a {
   margin: 10px 10px;
   padding: 14px;
   text-decoration: none;
+  transition: all 0.4s;
 }
 .jsscriptspage a:hover, .angularjspage a:hover, .secondpage a:hover,.contactmepage a:hover,.changepage a:hover {
   background: rgb(0, 0, 35);
   color: rgb(52, 216, 235);
   border: 1px solid rgb(52, 216, 235);
-  animation-name: secondpagelinkanimation;
-  animation-duration: 1s;
+  transform: scale(1.2);
 }
 .SPACE a {
-  background-image: url('http://www.storywarren.com/wp-content/uploads/2016/09/space-1.jpg');
+  background: url('http://www.storywarren.com/wp-content/uploads/2016/09/space-1.jpg') 50% 50% no-repeat;
   border: 1px solid rgb(52, 216, 235);
   border-radius: 3px;
   color: rgb(0, 0, 35);
@@ -88,13 +80,12 @@ a {
   text-transform: uppercase;
   text-decoration: none;
   background-attachment: fixed;
+  transition: all 0.4s;
 }
 .SPACE a:hover {
-  background: rgb(0, 0, 35);
   color: rgb(52, 216, 235);
   border: 1px solid rgb(52, 216, 235);
-  animation-name: spacepagelinkanimation;
-  animation-duration: 1s;
+  transform: scale(1.2);
 }
 .contactmepage a, .changepage a {
   text-transform: uppercase;
